# autonomy-osmosis-contracts

./: .gitignore  Beaker.toml  README.md  optimize.sh  tarpaulin.toml
.beaker/: state.json
contracts/registry-stake/: Cargo.toml
contracts/registry-stake/examples/: schema.rs
contracts/registry-stake/schema/: config.json  create_or_update_config.json  create_request_info.json  description.json  epoch_info_response.json  execute_msg.json  instantiate_msg.json  query_msg.json  recurring_fee_amount_response.json  request_info_response.json  requests_response.json  stake_amount_response.json  stakes_response.json  state.json  state_response.json
contracts/registry-stake/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/registry-stake/src/testing/: mock_querier.rs  mod.rs  test.rs
contracts/wrapper-osmosis/: Cargo.toml
contracts/wrapper-osmosis/examples/: schema.rs
contracts/wrapper-osmosis/schema/: execute_msg.json
contracts/wrapper-osmosis/src/: contract.rs  error.rs  msg.rs
integration-tests/: README.md  package.json  tsconfig.json
integration-tests/src/: helpers.ts  index.ts  localosmosis.ts  setup.ts
integration-tests/src/tests/: registry.ts  wrapper.ts
integration-tests/src/ts/registry/: Registry.client.ts  Registry.types.ts  index.ts
integration-tests/src/ts/wrapper/: Wrapper.client.ts  Wrapper.types.ts  index.ts
proposals/: registry.yml  wrapper.yml
