[package]
name = "registry-stake"
version = "0.1.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "1.0.0"
cw20 = { version = "0.15.1" }
cosmwasm-std = { version = "1.1.4", features = ["iterator"] }
cosmwasm-storage = { version = "1.1.4", features = ["iterator"] }
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
autonomy = { path = "../../packages/autonomy", default-features = false }
oorandom = { version = "11.1.3" }
thiserror = "1.0.37"
semver = "1.0.14"

[dev-dependencies]
cosmwasm-schema = { version = "1.1.4", default-features = false  }
